--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -27,14 +27,20 @@
 
   </head>
   <body>
-    <h1> @ViewData["h1"] </h1>
-    <hr />
-    @RenderBody()
-    <nav id="navbar">
-      <a asp-page="/Customer/ShowAll">Customers</a>
-      | <a asp-page="/Article/ShowAll">Articles</a>
-      | <a asp-page="/Film/ShowAll">Film</a>
-    </nav>
+
+    <main id="first-main">
+      <h1> @ViewData["h1"] </h1>
+      <hr />
+      @RenderBody()
+      <nav id="navbar">
+        <a asp-page="/Customer/ShowAll">Customers</a>
+        | <a asp-page="/Article/ShowAll">Articles</a>
+        | <a asp-page="/Film/ShowAll">Film</a>
+      </nav>
+    </main>
+
+    @RenderSection("SecondMain", required: false)
+
   </body>
 </html>
 
