--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -14,8 +14,15 @@ select[name='articleLoanDuration'] {
   display: inline-block;
 }
 
-.customer-article-message-validation {
-  max-width: 200px;
+.grid-container-should-be-removed {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+}
+
+.grid-container-should-be-removed label,
+.grid-container-should-be-removed input {
+  text-align: center;
 }
 
 table {
@@ -24,9 +31,17 @@ table {
   width: 100%;
 }
 
+.table-no-width {
+  width: initial;
+}
+
 th, td {
-  text-align: left;
+  text-align: center;
   padding: 8px;
+}
+
+.customer-article-message-validation {
+  max-width: 200px;
 }
 
 tr:nth-child(even) {
