As bootstrap is not liked by the teacher, add css taken in w3schools

--- a/Pages/Article/_FormPartialView.cshtml
+++ b/Pages/Article/_FormPartialView.cshtml
@@ -4,8 +4,8 @@
 <div class="form-group">
   <label asp-for="FilmId" class="control-label"></label>
   <!-- <select asp&#45;for="FilmId" class="form&#45;control" asp&#45;items="ViewBag.FilmId"> -->
-  <!--   <option value="" class="selectTagHelperFirstEmptyLine"> -->
-  <!--     Please select one -->
+  <!--   <option value=""> -->
+  <!--   ——  Please select one —— -->
   <!--   </option> -->
   <!-- </select> -->
   <input class="form-check-input" asp-for="FilmId" disabled />
@@ -46,8 +46,8 @@
   <label asp-for="BorrowerId" class="control-label"></label>
   <!-- <select asp&#45;for="BorrowerId" class ="form&#45;control" -->
   <!--   asp&#45;items="ViewBag.BorrowerId"> -->
-  <!--   <option value="" class="selectTagHelperFirstEmptyLine"> -->
-  <!--     Please select one -->
+  <!--   <option value=""> -->
+  <!--   ——  Please select one —— -->
   <!--   </option> -->
   <!-- </select> -->
   <input asp-for="BorrowerId" class="form-control" disabled />
