--- a/Pages/Customer/_InvoiceGenerated.cshtml
+++ b/Pages/Customer/_InvoiceGenerated.cshtml
@@ -64,7 +64,7 @@
     </tr>
   </table>
 
-  <div class="clear">
+  <p class="clear">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
     minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -142,9 +142,9 @@
     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
-  </div>
+  </p>
 
-  <div id="payement-condition">
+  <p id="payement-condition">
     Conditions de paiment : paiment comptant. <br />
 
     Aucun escompte consenti pour réglement anticipé. <br />
@@ -156,7 +156,7 @@
 
     Indéminsation forfaitaire pour frais de recouvrement due au créancier
     en cas de retard de paiement: 40 euros
-  </div>
+  </p>
 </main>
       </td>
     </tr>
