--- a/Pages/Film/ShowAll.cshtml
+++ b/Pages/Film/ShowAll.cshtml
@@ -12,19 +12,18 @@
     System.StringComparison.InvariantCultureIgnoreCase))
   {
     <h2>Top borrowed</h2>
-    <a asp-page="/Film/ShowAll">
+    <a class="btn" asp-page="/Film/ShowAll">
       Come back to list of all Films
     </a>
   }
   else
   {
     <form method="GET">
-      <label for="topN">Top N</label>
       <input id="topN" type="number" name="topN"
         placeholder="let empty for infinite"/>
       <input type="submit"
         value="Submite Top N film borrowed"
-        class="btn btn-danger" asp-page-handler="BestBorrowing" />
+        class="btn" asp-page-handler="BestBorrowing" />
     </form>
   }
 }
