--- a/Pages/Layout/_CreateOrEdit.cshtml
+++ b/Pages/Layout/_CreateOrEdit.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-page="./ShowAll">Back to List</a>
+    <a class="btn" asp-page="./ShowAll">Back to List</a>
 </div>
 
 @section SecondMain {
