--- a/Pages/Layout/_Details.cshtml
+++ b/Pages/Layout/_Details.cshtml
@@ -38,9 +38,19 @@
   </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.AbstractEntity.Id">Edit</a> |
-    <a asp-page="./Delete" asp-route-id="@Model.AbstractEntity.Id">Delete</a> |
-    <a asp-page="./ShowAll">Back to List</a>
+    <a class="btn" asp-page="./Edit" asp-route-id="@Model.AbstractEntity.Id">
+      Edit
+    </a>
+    @if (!@Context.Request.Path.ToString().Contains("/Delete",
+      System.StringComparison.InvariantCultureIgnoreCase))
+    {
+      <a class="btn" asp-page="./Delete" asp-route-id="@Model.AbstractEntity.Id">
+        Delete
+      </a>
+    }
+    <a class="btn" asp-page="./ShowAll">
+      Back to List
+    </a>
 </div>
 
 @RenderSection("DeleteButton", required: false)
