--- a/Pages/Article/ShowAll.cshtml
+++ b/Pages/Article/ShowAll.cshtml
@@ -12,7 +12,7 @@
     System.StringComparison.InvariantCultureIgnoreCase))
   {
     <h2>Articles only borrowed (ordered by return date)</h2>
-    <a asp-page="/Article/ShowAll">
+    <a class="btn" asp-page="/Article/ShowAll">
       Come back to list of all Articles
     </a>
   }
@@ -21,7 +21,7 @@
     <form method="GET">
       <input type="submit"
         value="Show only articles borrowed (ordered by return date)"
-        class="btn btn-danger" asp-page-handler="CurrentlyBorrowed" />
+        class="btn" asp-page-handler="CurrentlyBorrowed" />
     </form>
   }
 }
