--- a/Pages/Layout/_Delete.cshtml
+++ b/Pages/Layout/_Delete.cshtml
@@ -14,7 +14,7 @@
 @section DeleteButton {
   <br />
   <form method="post">
-    <input type="submit" value="delete" class="btn btn-danger"
+    <input type="submit" value="Delete" class="btn btn-danger"
       asp-page-handler="delete" asp-route-id="@Model.AbstractEntity.Id" >
   </form>
 }
