--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -1,38 +1,47 @@
-.selectTagHelperFirstEmptyLine {
-  display: inline-block;
-  border-bottom: 1px solid;
-  padding-bottom: 0.2em;
+body {
+  background-color: #f2f2f2;
+}
+/* Navbar */
+/* Inspired by: https://www.w3schools.com/css/css_navbar.asp */
+/* =================================================== */
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-#CustomerEditArticlesCurrentlyBorrowed {
-  background-image: linear-gradient(45deg,
-    rgba(153,218,255,1) 0%,
-    rgba(0,128,128,1) 95%);
+li {
+  float: left;
 }
 
-select[name='articleLoanDuration'] {
-  display: inline-block;
-}
-
-.grid-container-should-be-removed {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-}
-
-.grid-container-should-be-removed label,
-.grid-container-should-be-removed input {
+li a {
+  display: block;
+  color: white;
   text-align: center;
+  padding: 1em 2.5em;
+  text-decoration: none;
 }
 
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+/* Table */
+/* source: https://www.w3schools.com/css/css_form.asp */
+/* =================================================== */
 table {
   margin: 1em 0 1em 0;
   border-collapse: collapse;
   width: 100%;
 }
 
-.table-no-width {
-  width: initial;
+thead, th {
+  background-color: #4CAF50 ;
+  color: white;
 }
 
 th, td {
@@ -40,17 +49,90 @@ th, td {
   padding: 8px;
 }
 
-.customer-article-message-validation {
-  max-width: 200px;
+td > input + div {
+  margin: 1em;
 }
+
 
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-thead, th {
-  background-color: #4CAF50 ;
+
+/* Form */
+/* inspired by: https://www.w3schools.com/css/css_form.asp */
+/* =================================================== */
+input[type=text], select {
+  /* width: 100%; */
+  padding: 12px 20px;
+  margin: 8px 0;
+  /* display: inline-block; */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  /* width: 100%; */
+  background-color: #4CAF50;
   color: white;
+  padding: 1em 5em;
+  margin: 2em 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Following: by me */
+
+div.form-group {
+  margin: 2em 0;
+}
+
+.field-validation-error {
+  display: block;
+  color: red;
+}
+
+input {
+  color: black;
+  background-color: white;
+}
+
+input[data-val-required~="required."] {
+  background-color: #ffdccc;
+}
+
+label {
+  display: block;
+}
+
+/* Button */
+
+button, .btn {
+  background-color: #008CBA;;
+  border: none;
+  color: white;
+  padding: 1em 3em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0.5em 1em 0.5em 0em;
+  cursor: pointer;
+}
+
+input.btn-danger {
+  background-color: #f44336;
+}
+
+/* dl */
+
+dt {
+  font-weight: 700;
 }
 
 /* vim:sw=2:ts=2:et:fileformat=dos
