--- a/Pages/Film/_FormPartialView.cshtml
+++ b/Pages/Film/_FormPartialView.cshtml
@@ -12,7 +12,12 @@
 </div>
 <div class="form-group">
   <label asp-for="Price" class="control-label"></label>
-  <select asp-for="Price" class="form-control"></select>
+  <select asp-for="Price" class="form-control"
+    asp-items="Html.GetEnumSelectList<Price>()">
+    <option value="">
+    ——  Please select one ——
+    </option>
+  </select>
   <span asp-validation-for="Price" class="text-danger"></span>
 </div>
 <div class="form-group">
