--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -5,7 +5,7 @@ body {
 /* Inspired by: https://www.w3schools.com/css/css_navbar.asp */
 /* =================================================== */
 
-ul {
+nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -13,11 +13,11 @@ ul {
   background-color: #333;
 }
 
-li {
+nav li {
   float: left;
 }
 
-li a {
+nav li a {
   display: block;
   color: white;
   text-align: center;
@@ -26,7 +26,7 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+nav li a:hover {
   background-color: #111;
 }
 
@@ -127,6 +127,11 @@ button, .btn {
 
 input.btn-danger {
   background-color: #f44336;
+}
+
+input[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 /* dl */
